[package]
name = "chat-app-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.20.0", features = ["rt", "macros"] }
anyhow = "1.0"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-native-tls"] }
serde = { version = "1.0.194", features = ["derive"] }
